# kkt-automated-subtitles

./: LICENSE.md  MANIFEST.in  README.md  dev-requirements.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
examples/0-readme/: README.md  script.py
examples/1-basic-usage/: script.py
examples/2-subtitle-data/: README.md  script.py
examples/3-subtitle-profiles/: README.md  script.py  subtitle_profiles.yaml
examples/4-configuration/: README.md  config.yaml  script.py
examples/basic-usage/: script.py
kksubs/: kksubs.py
kksubs/model/: converters.py  data_access_services.py  domain_models.py  subtitle_services.py  validate.py
src/: controllers.py
src/kksubs/: kksubs.py
src/model/: converters.py  data_access_services.py  subtitle_services.py
test/: test_kksubs.py  test_obj_equality.py  test_subtitles.py
test/add-subtitles/: config.yaml  subtitle_profiles.yaml  test_add_subtitles.py
test/get-subtitle-groups-syntax/: example.txt  subtitle_profiles.yaml  test_get_subtitle_groups.py
test/integration-test-1/: subtitle_profiles.json  test_add_subtitles.py
test/integration-test-2/: test_add_subtitles.py
test/orbits/: subtitle_profiles.yaml  test_orbits.py
test/simple-text/: subtitle_profiles.yaml  test_simple_text.py
test/subtitle-profile-inheritance/: subtitle_profiles.yaml  test_subtitle_profile_inheritance.py
test/unit-test-text/: test_add_subtitle_groups_from_text.py  test_input.txt
test/unit-tests/: existing_yaml_writer.yaml  test_add_subtitles.py  test_default_font.py  test_input.json  test_models.py  (+9 more)
(+28 files in other folders)
