[metadata]
name = kksubs
version = 0.4
license = MIT
description = Automate subtitling for KKT stories.
author = ptf
url = https://github.com/pain-text-format/kkt-automated-subtitles

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts = 
    kksubs_cli = kksubs.cmds.app:main

[options.packages.find]
where=src